--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,13 @@
 		<title>Prologue by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/reset.css" />
 		<link rel="stylesheet" href="assets/css/base.css" />
 		<link rel="stylesheet" href="assets/css/layout.css" />
 		<link rel="stylesheet" href="assets/css/modules.css" />
 		<link rel="stylesheet" href="assets/css/state.css" />
 		<link rel="stylesheet" href="assets/css/theme.css" />
+
 
 
 	</head>
@@ -27,7 +28,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
+							<!-- <span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span> -->
 							<h1 id="title">Kevin Rosales</h1>
 							<p>Software Developer</p>
 						</div>
@@ -52,7 +53,7 @@
 							<!-- <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> -->
 							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
 							<!-- <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li> -->
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -97,13 +98,13 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
-											<h3>Ipsum Feugiat</h3>
+											<h3>Family trip to Mexico</h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
-											<h3>Rhoncus Semper</h3>
+											<h3>2018 High school graduation </h3>
 										</header>
 									</article>
 								</div>
@@ -111,29 +112,29 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
+											<h3>My brother and I</h3>
 										</header>
 									</article>
-									<article class="item">
+									<!-- <article class="item">
 										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
 											<h3>Natoque Vitae</h3>
 										</header>
-									</article>
+									</article> -->
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 										<header>
-											<h3>Dolor Penatibus</h3>
+											<h3>Me trying to look cool</h3>
 										</header>
 									</article>
-									<article class="item">
+									<!-- <article class="item">
 										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 										<header>
 											<h3>Orci Convallis</h3>
 										</header>
-									</article>
+									</article> -->
 								</div>
 							</div>
 
@@ -150,12 +151,7 @@
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>Well to start off my name is Kevin Rosales, I am a Spanish American, I am 18 years old. I attended Auburn Riverside High School, And I am learning to become a Software Developer at Code fellows. My personal hobbies include playing guitar, bird watching, playing old video games, and learning about web development. I also used to skateboard a lot before I got into web development. I am hoping to become a web developer young so I can keep up with the changing enviorment and better my life and the life of the pepole around me one website at a time. My ultimate goal is to someday sail the sea and go from town to town maybe making websites for people.</p>
 
 						</div>
 					</section>
@@ -168,7 +164,7 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>You can contact me at kevinrosalesolvera@gmail.com or at (253)-509-3674</p>
+							<p>If you want to get a hold of me you can contact me at kevinrosalesolvera@gmail.com or at (253)-509-3674</p>
 
 							<form method="post" action="#">
 								<div class="row">
