--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Prologue by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Prologue by HTML5 UP</title>
+		<title>Kevin's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/reset.css" />
@@ -88,10 +84,7 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
+							<p>The downside to being 18 and having the knowledge to be a full stack javascript and java developer is That I have no actual experience. I know what i'm doing and what I am talking about when it comes to web development don't get me wrong but the only place i've actually worked at was Mcdonalds when I was in high school. But I hope my work can show that I am good enough to keep up with the more experienced workers.</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
