--- a/public/index.html
+++ b/public/index.html
@@ -89,13 +89,13 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
 											<h3>Family trip to Mexico</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<a class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
 											<h3>2018 High school graduation </h3>
 										</header>
@@ -103,7 +103,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
 											<h3>My brother and I</h3>
 										</header>
@@ -117,7 +117,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 										<header>
 											<h3>Me trying to look cool</h3>
 										</header>
@@ -142,7 +142,7 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<a class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
 							<p>Well to start off my name is Kevin Rosales, I am a Spanish American, I am 18 years old. I attended Auburn Riverside High School, And I am learning to become a Software Developer at Code fellows. My personal hobbies include playing guitar, bird watching, playing old video games, and learning about web development. I also used to skateboard a lot before I got into web development. I am hoping to become a web developer young so I can keep up with the changing enviorment and better my life and the life of the pepole around me one website at a time. My ultimate goal is to someday sail the sea and go from town to town maybe making websites for people.</p>
 
@@ -159,7 +159,7 @@
 
 							<p>If you want to get a hold of me you can contact me at kevinrosalesolvera@gmail.com or at (253)-509-3674</p>
 
-							<form method="post" action="#">
+							<!-- <form method="post" action="#">
 								<div class="row">
 									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
@@ -170,7 +170,7 @@
 										<input type="submit" value="Send Message" />
 									</div>
 								</div>
-							</form>
+							</form> -->
 
 						</div>
 					</section>
@@ -181,9 +181,9 @@
 			<div id="footer">
 
 				<!-- Copyright -->
-					<ul class="copyright">
+					<!-- <ul class="copyright">
 						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
+					</ul> -->
 
 			</div>
 
